Views/routes changes

--- a/src/views/Web App Burger house.hbs
+++ b/src/views/Web App Burger house.hbs
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="dropdown-menu" id="dropdownMenu">
-            <a href="register.hbs">Войти в аккаунт</a>
+            <a href="auth/register">Войти в аккаунт</a>
             <a href="#">Item 2</a>
             <a href="#">Item 3</a>
             <a href="#">Item 4</a>
