--- a/src/views/enter.hbs
+++ b/src/views/enter.hbs
@@ -23,7 +23,7 @@
                 </div>
                 <button type="submit" class="form-control">Войти</button>
             </form>
-            <p>Нет аккаунта? <a href="register.hbs">Зарегистрироваться</a></p>
+            <p>Нет аккаунта? <a href="register">Зарегистрироваться</a></p>
         </div>
     </div>
 
