--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -25,16 +25,16 @@
             width: 100%;
             height: 100vh;
             background-color: black; 
-            justify-items: center; /* Центрируем содержимое по горизонтали */
-            align-items: center; /* Центрируем содержимое по вертикали */
+            justify-items: center; 
+            align-items: center; 
         }
 
         .forms {
-            text-align: center; /* Центрируем текст */
+            text-align: center; 
         }
 
         .form-group {
-            margin-bottom: 20px; /* Отступ между группами форм */
+            margin-bottom: 20px; 
         }
 
         .form-control {
@@ -44,9 +44,9 @@
             color: var(--white);
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 25px;
-            border: none; /* Убираем рамку */
-            border-radius: 5px; /* Скругляем углы */
-            padding: 0 10px; /* Отступ внутри поля */
+            border: none;
+            border-radius: 5px; 
+            padding: 0 10px; 
         }
 
         .register-form-control {
@@ -56,17 +56,17 @@
             color: var(--white);
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 25px;
-            border: none; /* Убираем рамку */
-            border-radius: 5px; /* Скругляем углы */
-            padding: 0 10px; /* Отступ внутри поля */
+            border: none; 
+            border-radius: 5px;
+            padding: 0 10px; 
         }
 
         button {
-            cursor: pointer; /* Указатель на кнопку */
+            cursor: pointer; 
         }
 
         a {
-            color: var(--yellow); /* Цвет ссылки */
+            color: var(--yellow); 
         }
     </style>
 </head>
@@ -95,7 +95,7 @@
                 </div>
                 <button type="submit" class="register-form-control">Зарегистрироваться</button>
             </form>
-            <p>Уже есть аккаунт? <a href="enter.hbs">Войти</a></p>
+            <p>Уже есть аккаунт? <a href="enter">Войти</a></p>
         </div>
     </div>
 </body>
