--- a/src/views/Web App Burger house.hbs
+++ b/src/views/Web App Burger house.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main_style.css">
     <title>БурGер house</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         </div>
         <div class="dropdown-menu" id="dropdownMenu">
             <a href="auth/register">Войти в аккаунт</a>
-            <a href="#">Item 2</a>
+            <a href="cart">Корзина</a>
             <a href="#">Item 3</a>
             <a href="#">Item 4</a>
         </div>
