--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Панель администратора</title>
 </head>
 <body>
@@ -13,16 +13,24 @@
         </div>
 
         <div class="forms">
-            <h2>Список заявок</h2>
+            <h2>Список пользователей</h2>
             <table class="admin-table">
                 <thead>
                     <tr>
-                        <th>{{name}}</th>
-                        <th>{{login}}</th>
-                        <th>{{password}}</th>
+                        <th>Имя</th>
+                        <th>Логин</th>
+                        <th>Пароль</th>
                     </tr>
                 </thead>
-                <tbody id="allUsers"></tbody>
+                <tbody>
+                    {{#each users}}
+                        <tr>
+                            <td>{{this.name}}</td>
+                            <td>{{this.username}}</td>
+                            <td>{{this.password}}</td>
+                        </tr>
+                    {{/each}}
+                </tbody>
             </table>
         </div>
     </div>
