--- a/src/public/stylesheets/main_style.css
+++ b/src/public/stylesheets/main_style.css
@@ -1,3 +1,4 @@
+
 :root {
     --main-color: rgb(28, 27, 23);
     --white: rgb(254, 254, 252);
@@ -11,19 +12,20 @@ html, body {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .main {
     display: grid;
     width: 100%;
     height: 100vh;
-    background-color: black; 
+    background-color: var(--main-color);
 }
 
 .upline {
     display: grid;
     height: 17vh;
-    background-color: var(--main-color); 
+    background-color: var(--main-color);
 }
 
 @media (max-width: 480px) {
@@ -35,7 +37,7 @@ html, body {
 .maintext {
     display: grid;
     height: 30vh;
-    background-color: green; 
+    background-color: var(--main-color);
 }
 
 .switchmenu {
@@ -50,10 +52,14 @@ html, body {
 .stillmenu {
     display: grid;
     height: 100vh;
-    background-color: cyan; 
+    background-color: var(--main-color);
 }
 
-.meats{
+#h1 {
+    color: var(--yellow);
+}
+
+.meats {
     display: flex;
     width: 100vw;
     height: 10vh;
@@ -62,7 +68,7 @@ html, body {
 
 .burgers {
     display: flex;
-    height: 45vh; 
+    height: 45vh;
     width: 50vw;
     background-color: var(--yellow);
     flex-shrink: 0;
@@ -80,14 +86,12 @@ html, body {
 
 .dropdown-menu {
     position: fixed;
-    left: -250px; 
+    left: -250px;
     top: 0;
     height: 100vh;
     width: 250px;
     background-color: var(--white);
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    transition: left 0.3s ease-in-out; 
+    transition: left 0.3s ease-in-out;
 }
 
 .dropdown-menu a {
@@ -105,9 +109,7 @@ html, body {
     left: 0;
 }
 
-
 .dropdown-menu.show ~ .upline #menu_button {
     opacity: 0;
     pointer-events: none;
 }
-
