--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -2,7 +2,6 @@
     --main-color: rgb(28, 27, 23);
     --white: rgb(254, 254, 252);
     --yellow: rgb(255, 205, 10);
-    --price-color: rgb(205, 180, 130);
 }
 
 html, body {
@@ -11,47 +10,53 @@ html, body {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .main {
     display: grid;
     width: 100%;
     height: 100vh;
-    background-color: black; 
+    background-color: var(--main-color);
 }
 
-.forms{
-    display: flex;
+.forms {
+    display: grid;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
-.form-group{
-    height: 80px;
-    width: 500px;
-    padding: 50px;
+.form-group {
+    margin: 20px 0; 
 }
 
-.form-control{
-    height: 80px;
-    width: 500px;
-    background-color: var(--yellow);
-    color: var(--white);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 25px;
-}
-
-.register-form-group{
-    height: 80px;
-    width: 500px;
-    padding: 20px;
-}
-
-.register-form-control{
-    height: 80px;
+.form-control {
+    height: 60px; 
     width: 500px;
     background-color: var(--yellow);
     color: var(--white);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 25px;
+    font-size: 20px; 
+    border: none; 
+    border-radius: 5px; 
+    padding: 0 15px; 
+  
+}
+
+.form-control:hover {
+    background-color: rgba(255, 205, 10, 0.8); 
+}
+
+p {
+    color: var(--white);
+    font-size: 18px; 
+}
+
+a {
+    color: var(--yellow);
+    text-decoration: none; 
+}
+
+a:hover {
+    text-decoration: underline; 
 }
