--- a/src/public/stylesheets/register_style.css
+++ b/src/public/stylesheets/register_style.css
@@ -18,7 +18,7 @@ html, body {
 .main {
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 130%;
     background-color: var(--main-color);
     justify-items: center;
     align-items: center;
@@ -62,6 +62,10 @@ p {
 a {
     color: var(--yellow);
     text-decoration: none; 
+}
+
+h2{
+    color: var(--yellow);
 }
 
 a:hover {
