--- a/src/views/enter.hbs
+++ b/src/views/enter.hbs
@@ -28,7 +28,7 @@
     </div>
      <script>
   // Обработка отправки формы
-        document.getElementById('loginForm').addEventListener('submit', async (event) => {
+       document.getElementById('loginForm').addEventListener('submit', async (event) => {
             event.preventDefault(); // Отменяем стандартное поведение формы
 
             const formData = new FormData(event.target);
@@ -46,8 +46,8 @@
                 const result = await response.json();
 
                 if (response.ok) {
-                    // Перенаправляем на страницу "Web App BH entered" после успешного входа
-                    window.location.href = '/Web App BH entered';
+                    // Перенаправляем на страницу "web-app-bh-entered" после успешного входа
+                    window.location.href = '/web-app-bh-entered';
                 } else {
                     alert(result.error || 'Ошибка при входе');
                 }
