--- a/src/views/Web-App-BH-entered.hbs
+++ b/src/views/Web-App-BH-entered.hbs
@@ -39,9 +39,14 @@
     {{/each}}
 </div>
 
-        <div class="stillmenu">
+       <div class="stillmenu">
             <div>
-
+                <img src="/src/public/images/chickens.jpg" alt="Куриные бургеры">
+                <img src="/src/public/images/fris.jpg" alt="Фри">
+                <img src="/src/public/images/goviadines.jpg" alt="Говяжьи бургеры">
+                <img src="/src/public/images/hlebs.jpg" alt="Сэндвичи">
+                <img src="/src/public/images/pigs.jpg" alt="Свиные бургеры">
+                <img src="/src/public/images/shaurmas.jpg" alt="Шаурма">
             </div>
         </div>
     </div>
