--- a/src/views/Web-App-BH-entered.hbs
+++ b/src/views/Web-App-BH-entered.hbs
@@ -11,7 +11,7 @@
         <div class="upline">
             <div></div>
             <div>
-                <button id="menu_button">Menu</button>
+                <button id="menu_button">---</button>
             </div>
         </div>
         <div class="dropdown-menu" id="dropdownMenu">
