--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Корзина</title>
-    <link rel="stylesheet" href="src/public/stylesheets/cart_style.css">
+    <link rel="stylesheet" href="/stylesheets/cart_style.css">
 </head>
 <body>
     <div class="container">
