Update Web App Burger house.hbs

--- a/src/views/Web App Burger house.hbs
+++ b/src/views/Web App Burger house.hbs
@@ -29,12 +29,13 @@
                 <h1>{{this.name}}</h1>
                 <p>{{this.description}}</p>
                 <p>Калории: {{this.calories}}</p>
-                <p>Цена: {{this.price}}$</p>
+                <p>Цена: {{this.price}}$</p>   
+                <button id="add_button">Добавить в корзину</button>  
             </div>
         {{/each}}
     {{else}}
         <p>Блюда не найдены.</p>
-    {{/if}}
+    {{/if}}>
 </div>
 
         <div class="stillmenu">
